--- a/workflow-templates/commit-queue.yml
+++ b/workflow-templates/commit-queue.yml
@@ -22,6 +22,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: ${{ github.event.inputs.id }}
+        shell: bash
+        run: echo run identifier ${{ github.event.inputs.id }}
       - uses: jianliang00/commit-queue-actions@v1.0
       
       # Add your steps here
